# AgentProjectBox

./: MANIFEST.in  README.md  agentprojectbox.py  cli.py  pyproject.toml  pytest.ini  server.py
collab/: __init__.py  negotiation.py
compliance/: __init__.py  rbac.py
examples/: workflows.py
examples/output_examples/: compliance_export.json  project_output.json  slack_digest.json
finance/: __init__.py  tracker.py
graph/: __init__.py  builder.py  templates.py
intake/: __init__.py  parser.py
monitor/: __init__.py  sla.py
outputs/: __init__.py  formatters.py
resources/: __init__.py  allocator.py
shared/: __init__.py  config.py  models.py  persistence.py  utils.py
tests/: test_basic.py
