[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentprojectbox"
version = "0.1.0"
description = "Headless project management SaaS module for AI agents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Project Management",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "networkx>=3.2.0",
    "numpy>=1.26.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "redis>=5.0.0",
    "uuid6>=2023.5.2",
    "aiohttp>=3.9.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",
]

[project.scripts]
agentproject = "agentprojectbox.cli:main"

[project.urls]
Homepage = "https://github.com/factory/AgentProjectBox"
Documentation = "https://docs.agentprojectbox.ai"
Repository = "https://github.com/factory/AgentProjectBox"

[tool.setuptools.packages.find]
where = ["."]
include = ["intake*", "graph*", "monitor*", "resources*", "finance*", "compliance*", "collab*", "outputs*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "C90", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
